@@ -1,5 +1,6 @@
 02/19/20
   - Changed connection to properly allow unconnected send for getting module properties
+  - Added GetDeviceProperties to get properties of a device at the specified address
 
 01/16/20
   - Updated readme
